# numerical-decision-threshold-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: compare_thresholds.py  simple_threshold_analysis.py
ndt.egg-info/: PKG-INFO
src/ndt/: core.py  metrics.py  thresholds.py
src/ndt.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_core.py  test_metrics.py  test_thresholds.py
