[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ndt"
version = "0.1.0"
description = "Utilities for post-hoc analysis of binary decision thresholds."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
dependencies = []

[tool.setuptools]
packages = ["ndt"]
